tests/baselines/reference/commentOnImportStatement3.errors.txt
commentOnImportStatement3.ts(4,22): error TS2307: Cannot find module './foo' or its corresponding type declarations.


==== commentOnImportStatement3.ts (1 errors) ====
    /* copyright */
    
    /* not copyright */
    import foo = require('./foo');
                         ~~~~~~~
!!! error TS2307: Cannot find module './foo' or its corresponding type declarations.